packages/masonex_cli/test/bricks/compilation_error/hooks/pre_gen.dart
// ignore_for_file: missing_function_body
import 'package:masonex/masonex.dart';void run(HookContext context)
